# 2024-InnovAI-Hackathon

./: README.md  sanad-ai-backbone.ipynb
.streamlit/: secrets.toml
AI_TURTLEFORCE/: README.md  chatbot.html  connection.php  hackathon.html  index.php  login.php  model.py  process.html  process.php
ByteBusters/: README.md
GANG_OF_03/: README.md  next-swagger-doc.json  (+2 more)
Nexus Agents/: .env  .gitignore  README.md  prototyping.ipynb  pyproject.toml  streamlit_app.py  testing.py
Nexus Agents/.github/workflows/: evaluate-web-search-agent.yml
Nexus Agents/agent_hub/: agent.py  front_llm.py  graph.py  llms.py  plan.py  state.py
Nexus Agents/agent_hub/browser/: browser_agent.py  guide.md
Nexus Agents/agent_hub/cli/: cli_agent.py  cli_generator.py  finetuned_llm.ipynb
Nexus Agents/agent_hub/cli/finetuning_pipeline/: finetunining_qQwen.ipynb
Nexus Agents/agent_hub/orchestrator/: orchestrator.py
Nexus Agents/agent_hub/web_searcher/: web_searcher.py
Nexus Agents/ci_cd/: ci_cd.md
Nexus Agents/docs/: AGENTS.md  guidelines.md  train.json
Nexus Agents/evaluation/benchmarks_datasets/: cli_benchmark.json  web_search_benchmark.json
Nexus Agents/evaluation/metrics/: accuracy.py  cost.py  latency.py  memory_efficiency.py  robustness.py
Nexus Agents/evaluation/pipelines/: web_searcher_pipeline.py
Nexus Agents/evaluation/reward_models/: based_reward_model.py  web_search_reward_model.py
Nexus Agents/requirements/: requirement.txt
Nexus Agents/scripts/: demo_example.py  run_evaluation.py
Nexus Agents/tests/agent_hub/web_searcher/: test_web_searcher.py
(+268 files in other folders)
