[tool.poetry]
name = "nexus-agents"
version = "0.1.0"
description = "An ecosystem of specialized, lightweight agents for computer automation."
authors = ["soufiane <soufiane@alpha10x.com>"]
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
langgraph = "^0.2.53"
langfuse = "^2.55.0"
pytest = "^8.3.3"
langchain = "^0.3.9"
langchain-groq = "^0.2.1"
langchain-together = "^0.2.0"
langchain-core = "^0.3.21"
langchain-community = "^0.3.8"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"